--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
 
   <h1>Odin Recipes</h1>
-  <a href='./recipes/pizza.html'>Pizza</a>
+  <ul>
+    <li><a href='./recipes/pizza.html'>Pizza</a></li>
+    <li><a href='./recipes/mac and cheese.html'>Mac and Cheese</a></li>
+  </ul>
+
 
 </body>
 
