--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <ul>
     <li><a href='./recipes/pizza.html'>Pizza</a></li>
     <li><a href='./recipes/mac and cheese.html'>Mac and Cheese</a></li>
+    <li><a href='./recipes/lassi.html'>Lassi</a></li>
   </ul>
 
 
